fixed alignment client subscription

--- a/reduxion/src/assets/sass/utils.scss
+++ b/reduxion/src/assets/sass/utils.scss
@@ -379,38 +379,60 @@ div#application {
   }
 }
 
-@media (min-width: 992px) {
+// @media (min-width: 992px) {
+//   .client {
+//     .section-api-keys{
+//       width: 1332px;
+//     }
+//     .subscription-type {
+//       .text-content {
+//         max-width: 260px;
+//       }
+//       .pricing-content {
+//         max-width: 780px;
+//       }
+//     }
+//   }
+// }
+//
+// @media (max-width: 1332px) {
+//   .client {
+//     .section-api-keys{
+//       width: 1332px;
+//     }
+//   }
+//   .box-inner{
+//     width: 1500px;
+//   }
+// }
+// @media (min-width: 1132px) {
+//   .client {
+//     .section-api-keys{
+//       width: 100%;
+//     }
+//   }
+// }
+
+@media (max-width: 1350px) {
   .client {
-    .section-api-keys{
-      width: 1332px;
-    }
     .subscription-type {
-      .text-content {
-        max-width: 260px;
-      }
-      .pricing-content {
-        max-width: 780px;
-      }
+      width: 1080px!important;
     }
   }
 }
 
-@media (max-width: 1332px) {
-  .client {
-    .section-api-keys{
-      width: 1332px;
-    }
-  }
-  .box-inner{
-    width: 1500px;
-  }
+.pricing-content {
+  width: 73%!important;
 }
-@media (min-width: 1132px) {
-  .client {
-    .section-api-keys{
-      width: 100%;
-    }
-  }
+
+.mdl-layout--fixed-drawer>.mdl-layout__content{
+  margin-left: 240px;
+}
+.mdl-cell--3-col, .mdl-cell--3-col-tablet.mdl-cell--3-col-tablet{
+  width: calc(25% - 16px);
+}
+.mdl-cell--9-col, .mdl-cell--9-col-tablet.mdl-cell--9-col-tablet{
+  width: calc(50% - 16px);
 }
 .datepicker table tr td,
 .datepicker table tr th {
